--- a/index.html
+++ b/index.html
@@ -1,20 +1,310 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>lesson9</title>
+    <title>lesson10</title>
+    <link href="css/reset.css" rel="stylesheet">
+    <link href="css/styley.css" rel="stylesheet">
+
 </head>
 
 <body>
-    <div class="container">
-        
+    <header class="header">
+        <div class="conteiner">
+            <div class="navbar">
 
-    </div>
+                <ul class="ul-1">
+                    <li class="li-1"><a class="a-1" href="#">Home</a></li>
+                    <li class="li-1"><a class="a-1" href="#">About</a></li>
+                    <li class="li-1"><a class="a-1" href="#">Blog</a></li>
+                </ul>
 
 
-    
+                <img src="img/logo.png" alt="cmuzi" class="logo">
+
+                <ul class="ul-1">
+                    <li class="li-1"><a class="a-1" href="#">Menu</a></li>
+                    <li class="li-1"><a class="a-1" href="#">Shop</a></li>
+                    <li class="li-1"><a class="a-1" href="#">Contact</a></li>
+                </ul>
+            </div>
+
+        </div>
+    </header>
+    <!-- завершено------------------->
+
+    <main>
+        <div class="about">
+            <div class="conteiner">
+                <div class="about_items">
+                    <p class="about_title">About US</p>
+                    <p class="about_subtitle">Some facts about our activity</p>
+                </div>
+            </div>
+        </div>
+        <!-- ----завершено----------->
+
+        <div class="smoothie">
+            <div class="conteiner">
+
+                <div class="smoothie_wrapp">
+                    <div class="smoothie_items">
+
+                        <div class="item">
+                            <h3 class="smoothie_zag">Triple Berry Smoothie</h3>
+                            <p class="text">A smoothie is so much more than blended fruit.
+                                It's an art with all of it's different elements blending
+                                perfectly together.</p>
+                        </div>
+
+                        <div class="item">
+                            <h3 class="smoothie_zag">Pick your fruit</h3>
+                            <p class="text">We chose strawberries, blackberries, raspberries,
+                                and bananas to be our base, but any combo of fruit is great.</p>
+                        </div>
+
+
+                        <div class="item">
+                            <h3 class="smoothie_zag">Fresh or frozen fruit?</h3>
+                            <p class="text">For smoothies, frozen fruit is best.
+                                It blends up thicker than fresh and gives you a really
+                                cold smoothie to enjoy when done.</p>
+                        </div>
+                    </div>
+
+                    <div class="smoothie_icon"><img src="img/smoothie.png "></div>
+
+                    <div class="smoothie_items">
+
+                        <div class="item">
+                            <h3 class="smoothie_zag">Add a thickener.</h3>
+                            <p class="text">We use unsweetened greek yogurt in our smoothie,
+                                but peanut butter, almond butter, or vanilla
+                                yogurt are all great options.</p>
+                        </div>
+
+                        <div class="item">
+                            <h3 class="smoothie_zag">Choose a liquid</h3>
+                            <p class="text">Almond milk is great for the added nutty flavor,
+                                but coconut milk pairs well with a tropical smoothie.</p>
+                        </div>
+
+                        <div class="item">
+                            <h3 class="smoothie_zag">Throw some add-ins in</h3>
+                            <p class="text">Add some spinach or kale for additional
+                                nutrition or flax seeds for omega-3s.
+                                Flavors like fresh mint, vanilla extract, cinnamon, or honey</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- завершено----------------->
+
+        <div class="fruits">
+            <div class="conteiner">
+                <div class="fruits_wrapp">
+
+                    <div class="fruit">
+                        <img class="img_fr cherry" src="img/cherry 2.svg">
+                        <p class="p-1">4832</p>
+                        <p class="tx">Cherry smoothies</p>
+                    </div>
+                    <div class="fruit">
+                        <img class="img_fr apple" src="img/apple.svg">
+                        <p class="p-1">2531</p>
+                        <p class="tx">Apple smoothies</p>
+                    </div>
+                    <div class="fruit">
+                        <img class="img_fr pineapple" src="img/pineapple .svg">
+                        <p class="p-1">1939</p>
+                        <p class="tx">Ananas smoothies</p>
+                    </div>
+                    <div class="fruit">
+                        <img class="img_fr banana" src="img/banana.svg">
+                        <p class="p-1">7812</p>
+                        <p class="tx">Bananas smoothies</p>
+                    </div>
+
+
+                </div>
+            </div>
+        </div>
+        <!-- завершено------------------>
+
+        <div class="team">
+
+            <div class="conteiner">
+                <div class="title">Dream team</div>
+                <div class="subtitle">Meet our members</div>
+
+                <div class="team_items">
+                    <div class="team_item">
+                        <div class="team_icon">
+                            <img src="img/pic1.png" class="team_img">
+                        </div>
+                        <div class="team_data">
+                            <div class="team_item_title">Ava Addams</div>
+                            <div class="team_item_subtitle">Designer</div>
+                            <div class="team_item_p">
+                                Lorem ipsum dolor sit amet,
+                                consectetur adipiscing elit.
+                                Suspendisse dui ante, cons non profit here.
+                            </div>
+                            <div class="team_item_social">
+                                <a href="#" class="social_a"><img src="img/facebook.png" class="social_img" alt=""></a>
+                                <a href="#" class="social_a"><img src="img/youtube.png" class="social_img" alt=""></a>
+                                <a href="#" class="social_a"><img src="img/insta.png" class="social_img" alt=""></a>
+                                <a href="#" class="social_a"><img src="img/twiter.png" class="social_img" alt=""></a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- item1 завершается ---------- -->
+                    <div class="team_item">
+                        <div class="team_icon">
+                            <img src="img/pic2.png" class="team_img">
+                        </div>
+                        <div class="team_data">
+                            <div class="team_item_title">Ellen Marlen</div>
+                            <div class="team_item_subtitle">Designer</div>
+                            <div class="team_item_p">
+                                Lorem ipsum dolor sit amet,
+                                consectetur adipiscing elit.
+                                Suspendisse dui ante, cons non profit here.
+                            </div>
+                            <div class="team_item_social">
+                                <a href="#" class="social_a"><img src="img/facebook.png" class="social_img" alt=""></a>
+                                <a href="#" class="social_a"><img src="img/youtube.png" class="social_img" alt=""></a>
+                                <a href="#" class="social_a"><img src="img/insta.png" class="social_img" alt=""></a>
+                                <a href="#" class="social_a"><img src="img/twiter.png" class="social_img" alt=""></a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- item2 завершается -------------->
+                    <div class="team_item">
+                        <div class="team_icon">
+                            <img src="img/pic1.png" class="team_img img_rev">
+                        </div>
+                        <div class="team_data">
+                            <div class="team_item_title">Rebecca Le</div>
+                            <div class="team_item_subtitle">Designer</div>
+                            <div class="team_item_p">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                Suspendisse dui ante, cons non profit here.
+                            </div>
+                            <div class="team_item_social">
+                                <a href="#" class="social_a"><img src="img/facebook.png" class="social_img" alt=""></a>
+                                <a href="#" class="social_a"><img src="img/youtube.png" class="social_img" alt=""></a>
+                                <a href="#" class="social_a"><img src="img/insta.png" class="social_img" alt=""></a>
+                                <a href="#" class="social_a"><img src="img/twiter.png" class="social_img" alt=""></a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- item3 завершается --------------->
+                    <div class="team_item">
+                        <div class="team_icon">
+                            <img src="img/pic1.png" class="team_img img_rev">
+                        </div>
+                        <div class="team_data">
+                            <div class="team_item_title">Andy Shped</div>
+                            <div class="team_item_subtitle">Drinker</div>
+                            <div class="team_item_p">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                Suspendisse dui ante, cons non profit here.
+                            </div>
+                            <div class="team_item_social">
+                                <a href="#" class="social_a"><img src="img/facebook.png" class="social_img" alt=""></a>
+                                <a href="#" class="social_a"><img src="img/youtube.png" class="social_img" alt=""></a>
+                                <a href="#" class="social_a"><img src="img/insta.png" class="social_img" alt=""></a>
+                                <a href="#" class="social_a"><img src="img/twiter.png" class="social_img" alt=""></a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- item4 завершается  ---------------->
+                </div>
+            </div>
+
+        </div>
+
+    </main>
+
+    <footer>
+        <div class="footer">
+            <div class="footer_one">
+                <div class="conteiner">
+                    <div class="footer_items">
+                        <div class="footer_item ">
+                            <div class="hours ">Opening Hours</div>
+                            <ul class="days ring">
+                                <li class="day">Monday /<span class="time_d"> 9:00 – 20:00</span></li>
+                                <li class="day">Tuesday /<span class="time_d"> 9:00 – 20:00</span></li>
+                                <li class="day">Wednesday /<span class="time_d"> 9:00 – 20:00</span></li>
+                                <li class="day">Thursday / <span class="time_d">9:00 – 20:00</span></li>
+                                <li class="day">Friday / <span class="time_d">9:00 – 20:00</span></li>
+                                <li class="day">Saturday /<span class="time_d"> 9:00 – 20:00</span></li>
+                                <li class="day">Sunday /<span class="time_d"> CLOSED</span></li>
+                            </ul>
+                        </div>
+                        <div class="footer_item ">
+                            <div class="info_items ">Contact Info</div>
+                            <div class="Info ring"><a href="#" class="info_a"><img class="info_img"
+                                        src="../lesson10/img/phone.png">+38 899 4320 32</a></div>
+                            <div class="Info "><a href="#" class="info_a"><img class="info_img"
+                                        src="../lesson10/img/email.png">hai@aletheme.com </a></div>
+                            <div class="Info "><a href="#" class="info_a"><img class="info_img"
+                                        src="../lesson10/img/adress.png"> France, Paris, Lille de la Cite 1p</a></div>
+                                        <!-- ПРОБЛЕМНЫЙ БЛОК ГДЕ НЕ ПОЛУЧИЛОСЬ ИЗМЕНИТЬ РАЗМЕР 3 ЗНАЧКА -->
+
+                        </div>
+                        <div class="footer_item ">
+                            <div class="inst_items">Instagram feed</div>
+                            <div class="inst_flex">
+                                <div class="inst"> <a href="#" class="inst_a"><img class="inst_img" src="img/malina.png"
+                                            alt="malina"></a></div>
+                                <div class="inst"> <a href="#" class="inst_a"><img class="inst_img"
+                                            src="img/chernica.png" alt="malina"></a></div>
+                                <div class="inst"><a href="#" class="inst_a"><img class="inst_img"
+                                            src="img/fruitkasha.png" alt="malina"></a></div>
+                                <div class="inst"><a href="#" class="inst_a"><img class="inst_img"
+                                            src="img/smoothiered.png" alt="malina"></a></div>
+                                <div class="inst"><a href="#" class="inst_a"><img class="inst_img" src="img/kivi.png"
+                                            alt="malina"></a></div>
+                                <div class="inst"> <a href="#" class="inst_a"><img class="inst_img" src="img/orange.png"
+                                            alt="malina"></a></div>
+                            </div>
+
+
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            <div class="footer_two">
+                <div class="conteiner">
+                    <div class="footer_social">
+                        <p class="worldpress">Copyrights 2020. Ale Theme for WordPress</p>
+                        <div class="fts">
+                            <a class="footer_two_social" href="#"><img class="footer_two_img" src="img/facebookkk.png"
+                                    alt=""></a>
+                            <a class="footer_two_social" href="#"><img class="footer_two_img" src="img/youtubeeee.png"
+                                    alt=""></a>
+                            <a class="footer_two_social" href="#"><img class="footer_two_img" src="img/instaaaaaa.png"
+                                    alt=""></a>
+                            <a class="footer_two_social" href="#"><img class="footer_two_img" src="img/twitterrrrrrr.png"
+                                    alt=""></a>
+                        </div>
+
+
+                    </div>
+                </div>
+
+            </div>
+
+    </footer>
+
 </body>
+
 </html>
